[package]
name = "atomic_blobject"
version = "0.1.0"
authors = ["Brian Anderson <andersrb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.10.0"
fancy_flocks = { path = "../fancy_flocks" }
log = "0.3.8"
rand = "0.3.15"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
