[package]
name = "atomic_blobject"
version = "0.1.0"
authors = ["Brian Anderson <andersrb@gmail.com>"]
edition = "2018"
description = "Simple cross-process reader-writer-locked datastore"
license = "MIT/Apache-2.0/BSL-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.10.0"
fancy_flocks = "0.1.0"
log = "0.3.8"
rand = "0.3.15"
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0.40"
